--- a/WebApp/userhome.css
+++ b/WebApp/userhome.css
@@ -5,6 +5,19 @@ body
     background-repeat: no-repeat;
 }
 
+a {
+    display: block;
+    width: 100%;
+    line-height: 2em;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+a:hover {
+    color: red;
+    background: #eff;
+}
 
 #id02
 {
